--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-  IMAGE_NAME: lgtm-server
+  IMAGE_NAME: core
 
 jobs:
   build-and-deploy:
