--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,11 @@ jobs:
 
       - name: SSH to EC2 and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             cd /home/${USER}/server
+            echo "ECR_REGISTRY=$ECR_REGISTRY" > .env
+            echo "IMAGE_NAME=$IMAGE_NAME" >> .env
+            git pull
             docker compose pull
-            docker compose up -d
+            docker compose up -d --force-recreate
           EOF
