--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 services:
   # Spring Boot Application Service
   app:
-    build:
-      context: . # Dockerfile이 있는 현재 디렉토리를 빌드 컨텍스트로 사용
-      dockerfile: Dockerfile # Dockerfile의 이름
+    image: ${ECR_REGISTRY}/${IMAGE_NAME}:latest
     ports:
       - "8080:8080" # 호스트 포트:컨테이너 포트
     environment:
@@ -14,7 +12,6 @@ services:
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
       JWT_SECRET_KEY: YmFzZTY0ZW5jb2RlZHNlY3JldGtleXN0cmluZ2hlcmU=
-       # H2 Console (개발용) - 필요하다면 추가
       SPRING_H2_CONSOLE_ENABLED: true
       SPRING_H2_CONSOLE_PATH: /h2-console
       SPRING_DATASOURCE_URL: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
